test/parser.d/invalid/types1.surc.bad
x: Integer: Integer = 3
